--- a/Tools/DtTemplates/Dt/Dt.csproj
+++ b/Tools/DtTemplates/Dt/Dt.csproj
@@ -203,6 +203,32 @@
     <Compile Include="Entity\InsertEntityForm.Designer.cs">
       <DependentUpon>InsertEntityForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="LocalTbl\FileParams.cs" />
+    <Compile Include="LocalTbl\LocalTblForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LocalTbl\LocalTblForm.Designer.cs">
+      <DependentUpon>LocalTblForm.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="LocalTbl\Res\EntityForm.xaml.cs">
+      <DependentUpon>EntityForm.xaml</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LocalTbl\Res\TwoDefSearch.cs" />
+    <EmbeddedResource Include="LocalTbl\Res\TwoCusSearch.cs" />
+    <EmbeddedResource Include="LocalTbl\Res\EntityCusSearch.cs" />
+    <EmbeddedResource Include="LocalTbl\Res\EntityDefSearch.cs" />
+    <Compile Include="LocalTbl\Sqlite\AtLocal.cs" />
+    <Compile Include="LocalTbl\Sqlite\SqliteAttributes.cs" />
+    <Compile Include="LocalTbl\Sqlite\SqliteCommandEx.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="LocalTbl\Sqlite\SqliteConnectionEx.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="LocalTbl\Sqlite\SqliteEntitySchema.cs" />
+    <Compile Include="LocalTbl\Sqlite\SqliteProvider.cs" />
+    <Compile Include="LocalTbl\Sqlite\SqliteTblsInfo.cs" />
+    <Compile Include="LocalTbl\Sqlite\TableMapping.cs" />
     <Compile Include="LvXaml\ICmdForm.cs" />
     <Compile Include="LvXaml\LvXaml.cs">
       <SubType>UserControl</SubType>
@@ -211,6 +237,9 @@
       <DependentUpon>LvXaml.cs</DependentUpon>
     </Compile>
     <Compile Include="Kit.cs" />
+    <EmbeddedResource Include="LocalTbl\LocalTblForm.resx">
+      <DependentUpon>LocalTblForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ManyToMany\Res\MainForm.xaml.cs">
       <DependentUpon>MainForm.xaml</DependentUpon>
     </EmbeddedResource>
@@ -401,6 +430,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Data.Sqlite">
+      <Version>6.0.8</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.SDK" Version="17.0.31902.203" ExcludeAssets="runtime">
       <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
@@ -413,6 +445,9 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="e_sqlite3.dll">
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
     <Content Include="Resources\Logo.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
@@ -638,6 +673,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="OnToMany\Res\ChildForm.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="LocalTbl\Res\EntityForm.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
