--- a/Client/Dt.Shell.IOS/Dt.Shell.IOS.csproj
+++ b/Client/Dt.Shell.IOS/Dt.Shell.IOS.csproj
@@ -41,6 +41,7 @@
         <BundleResource Include="iOS\Resources\logo.png" />
         <BundleResource Include="..\Dt.Shell.Win\Assets\Fonts\icon.ttf" Link="iOS\Resources\Fonts\icon.ttf" />
         <BundleResource Include="..\Dt.Shell.Win\Assets\Fonts\uno-fluentui-assets.ttf" Link="iOS\Resources\Fonts\uno-fluentui-assets.ttf" />
+        <BundleResource Include="..\Dt.Shell.Win\Assets\Lottie\*.json" Link="iOS\Resources\Assets\Lottie\%(Filename).json" />
         <ImageAsset Include="iOS\Assets.xcassets\AppIcons.appiconset\Icon-20%402x.png" />
         <ImageAsset Include="iOS\Assets.xcassets\AppIcons.appiconset\Icon-20%403x.png" />
         <ImageAsset Include="iOS\Assets.xcassets\AppIcons.appiconset\Icon-120.png" />
