--- a/Client/Common.props
+++ b/Client/Common.props
@@ -18,15 +18,15 @@
     </PropertyGroup>
 
     <PropertyGroup Condition="$(TargetFramework.Contains('-ios'))">
-        <DefineConstants>$(DefineConstants);IOS</DefineConstants>
+        <DefineConstants>$(DefineConstants);IOS;UNO_DISABLE_KNOWN_MISSING_TYPES</DefineConstants>
     </PropertyGroup>
 
     <PropertyGroup Condition="$(TargetFramework.Contains('-android'))">
-        <DefineConstants>$(DefineConstants);ANDROID</DefineConstants>
+        <DefineConstants>$(DefineConstants);ANDROID;UNO_DISABLE_KNOWN_MISSING_TYPES</DefineConstants>
     </PropertyGroup>
 
     <PropertyGroup Condition="'$(TargetFramework)' == 'net6.0'">
-        <DefineConstants>$(DefineConstants);WASM</DefineConstants>
+        <DefineConstants>$(DefineConstants);WASM;UNO_DISABLE_KNOWN_MISSING_TYPES</DefineConstants>
     </PropertyGroup>
 
     <!-- 公共引用包 -->
