内置用户协议和隐私政策对话框内容

--- a/Client/Dt.Base/Dt.Base.csproj
+++ b/Client/Dt.Base/Dt.Base.csproj
@@ -31,4 +31,9 @@
     <ItemGroup>
         <Content Remove="Chat\WebRTC\WebRTC通信流程.png" />
     </ItemGroup>
+
+    <ItemGroup>
+      <EmbeddedResource Include="Controls\Policy\Privacy.txt" />
+      <EmbeddedResource Include="Controls\Policy\Agreement.txt" />
+    </ItemGroup>
 </Project>
