--- a/Client/Dt.Shell.IOS/iOS/Info.plist
+++ b/Client/Dt.Shell.IOS/iOS/Info.plist
@@ -12,6 +12,8 @@
 	<string>22.6.10</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+    <key>MinimumOSVersion</key>
+    <string>10.0</string>
 	<key>UIDeviceFamily</key>
 	<array>
 		<integer>1</integer>
