--- a/Infras/Dt.Infras.IOS/Dt.Infras.IOS.csproj
+++ b/Infras/Dt.Infras.IOS/Dt.Infras.IOS.csproj
@@ -36,8 +36,8 @@
         <BundleResource Include="iOS\Resources\SplashScreen%402x.png" />
         <BundleResource Include="iOS\Resources\SplashScreen%403x.png" />
         <BundleResource Include="iOS\Resources\logo.png" />
-        <BundleResource Include="..\..\Common\Fonts\icon.ttf" Link="iOS\Resources\Fonts\icon.ttf" />
-        <BundleResource Include="..\..\Common\Fonts\uno-fluentui-assets.ttf" Link="iOS\Resources\Fonts\uno-fluentui-assets.ttf" />
+        <BundleResource Include="..\..\Client\Dt.Shell.Win\Assets\Fonts\icon.ttf" Link="iOS\Resources\Fonts\icon.ttf" />
+        <BundleResource Include="..\..\Client\Dt.Shell.Win\Assets\Fonts\uno-fluentui-assets.ttf" Link="iOS\Resources\Fonts\uno-fluentui-assets.ttf" />
         <ImageAsset Include="iOS\Assets.xcassets\AppIcons.appiconset\Icon-20%402x.png" />
         <ImageAsset Include="iOS\Assets.xcassets\AppIcons.appiconset\Icon-20%403x.png" />
         <ImageAsset Include="iOS\Assets.xcassets\AppIcons.appiconset\Icon-120.png" />
