--- a/Tools/DtTemplates/PrjTemplate/Client/Stub/Common.props
+++ b/Tools/DtTemplates/PrjTemplate/Client/Stub/Common.props
@@ -8,14 +8,17 @@
 	<!-- 定义平台常量 -->
 	<PropertyGroup Condition="$(TargetFramework.Contains('-windows'))">
 		<DefineConstants>$(DefineConstants);WIN</DefineConstants>
+		<TargetPlatformMinVersion>10.0.17763.0</TargetPlatformMinVersion>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="$(TargetFramework.Contains('-ios'))">
 		<DefineConstants>$(DefineConstants);IOS;UNO_DISABLE_KNOWN_MISSING_TYPES</DefineConstants>
+		<SupportedOSPlatformVersion>10.0</SupportedOSPlatformVersion>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="$(TargetFramework.Contains('-android'))">
 		<DefineConstants>$(DefineConstants);ANDROID;UNO_DISABLE_KNOWN_MISSING_TYPES</DefineConstants>
+		<SupportedOSPlatformVersion>21.0</SupportedOSPlatformVersion>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(TargetFramework)' == 'net6.0'">
@@ -24,7 +27,7 @@
 
     <!-- 引用包 -->
     <ItemGroup>
-		<PackageReference Include="Dt.Client" Version="2.1.0" />
+		<PackageReference Include="Dt.Client" Version="2.5.0" />
 		<PackageReference Include="Microsoft.Data.Sqlite" Version="6.0.8" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
 		<!-- 2.1.0后支持.net6 maui，旧版在iOS中无法初始化 -->
