--- a/Client/Common.props
+++ b/Client/Common.props
@@ -37,8 +37,8 @@
         <PackageReference Include="Dt.Infras" Version="2.2.0" />
         <PackageReference Include="Microsoft.Data.Sqlite" Version="6.0.9" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
-        <!-- 2.1.0后支持.net6 maui，旧版在iOS中无法初始化 -->
-        <PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.1.1" />
+        <!-- 2.1.0后支持.net6 maui，旧版在iOS中无法初始化，2.1.1在iOS中无法AOT -->
+        <PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.1.0" />
         <PackageReference Include="Serilog" Version="2.11.0" />
         <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
         <PackageReference Include="Serilog.Formatting.Compact" Version="1.1.0" />
@@ -79,7 +79,7 @@
     <ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
         <PackageReference Include="Uno.WinUI.WebAssembly" Version="4.5.9" />
         <PackageReference Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.4.0" />
-        <PackageReference Include="SQLitePCLRaw.provider.sqlite3" Version="2.1.1" />
+        <PackageReference Include="SQLitePCLRaw.provider.sqlite3" Version="2.1.0" />
     </ItemGroup>
 
     <ItemGroup>
