uno4.5.9中android的image路径采用新方式，4平台统一放在项目的Images目录下

--- a/Client/Dt.Shell.Droid/Dt.Shell.Droid.csproj
+++ b/Client/Dt.Shell.Droid/Dt.Shell.Droid.csproj
@@ -19,6 +19,7 @@
         <AndroidAsset Include="..\Dt.Shell.Win\Assets\Fonts\icon.ttf" Link="Android\Assets\Fonts\icon.ttf" />
         <AndroidAsset Include="..\Dt.Shell.Win\Assets\Fonts\uno-fluentui-assets.ttf" Link="Android\Assets\Fonts\uno-fluentui-assets.ttf" />
         <AndroidAsset Include="..\Dt.Shell.Win\Assets\Lottie\*.json" Link="Android\Assets\Assets\Lottie\%(Filename).json" />
+        <Content Include="..\Dt.Shell.Win\Images\*.png" Link="Images\%(Filename).png" />
     </ItemGroup>
     
     <ItemGroup>
