--- a/Client/Dt.Shell.IOS/Dt.Shell.IOS.csproj
+++ b/Client/Dt.Shell.IOS/Dt.Shell.IOS.csproj
@@ -36,5 +36,6 @@
         <ImageAsset Include="iOS\Assets.xcassets\AppIcons.appiconset\Icon-29%403x.png" />
         <ImageAsset Include="iOS\Assets.xcassets\AppIcons.appiconset\Icon-40%402x.png" />
         <ImageAsset Include="iOS\Assets.xcassets\AppIcons.appiconset\Icon-1024.png" />
+        <Content Include="..\Dt.Shell.Win\Images\*.png" Link="Images\%(Filename).png" />
     </ItemGroup>
 </Project>
