--- a/Client/Dt.Shell.Win/Dt.Shell.Win.csproj
+++ b/Client/Dt.Shell.Win/Dt.Shell.Win.csproj
@@ -25,11 +25,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <Content Include="Assets\SplashScreen.scale-200.png" />
-        <Content Include="Assets\Square150x150Logo.scale-200.png" />
-        <Content Include="Assets\Square44x44Logo.scale-200.png" />
-        <Content Include="Assets\Square44x44Logo.targetsize-24_altform-unplated.png" />
-        <Content Include="Assets\Wide310x150Logo.scale-200.png" />
+        <Content Include="Images\*.png" />
     </ItemGroup>
 
     <ItemGroup>
