--- a/Client/Dt.Shell.Droid/Dt.Shell.Droid.csproj
+++ b/Client/Dt.Shell.Droid/Dt.Shell.Droid.csproj
@@ -16,8 +16,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <AndroidAsset Include="..\Dt.Shell.Win\Assets\Fonts\icon.ttf" Link="Android\Assets\Fonts\icon.ttf" />
-        <AndroidAsset Include="..\Dt.Shell.Win\Assets\Fonts\uno-fluentui-assets.ttf" Link="Android\Assets\Fonts\uno-fluentui-assets.ttf" />
+        <AndroidAsset Include="..\Dt.Shell.Win\Assets\Fonts\*.ttf" Link="Android\Assets\Fonts\%(Filename).ttf" />
         <AndroidAsset Include="..\Dt.Shell.Win\Assets\Lottie\*.json" Link="Android\Assets\Assets\Lottie\%(Filename).json" />
         <Content Include="..\Dt.Shell.Win\Images\*.png" Link="Images\%(Filename).png" />
     </ItemGroup>
