发布2.8.0 VS扩展工具

--- a/Tools/DtTemplates/PrjTemplate/Client/Stub/Common.props
+++ b/Tools/DtTemplates/PrjTemplate/Client/Stub/Common.props
@@ -2,7 +2,13 @@
 	<PropertyGroup>
 		<NoWarn>$(NoWarn);1591;NU1701;Uno0001;0252</NoWarn>
 		<ImplicitUsings>enable</ImplicitUsings>
+		<!-- wasm不支持Essentials, android编译产生缺androidx.window.extensions.jar androidx.window.sidecar.jar警告 -->
 		<UseMauiEssentials Condition="'$(TargetFramework)' != 'net6.0'">true</UseMauiEssentials>
+	</PropertyGroup>
+
+	<!-- release不输出pbd调试信息 -->
+	<PropertyGroup Condition="'$(Configuration)'=='Release'">
+		<DebugType>none</DebugType>
 	</PropertyGroup>
 
 	<!-- 定义平台常量 -->
@@ -25,12 +31,12 @@
 		<DefineConstants>$(DefineConstants);WASM;UNO_DISABLE_KNOWN_MISSING_TYPES</DefineConstants>
 	</PropertyGroup>
 
-    <!-- 引用包 -->
-    <ItemGroup>
-		<PackageReference Include="Dt.Client" Version="2.5.0" />
-		<PackageReference Include="Microsoft.Data.Sqlite" Version="6.0.8" />
+	<!-- 公共引用包 -->
+	<ItemGroup>
+		<PackageReference Include="Dt.Client" Version="2.8.0" />
+		<PackageReference Include="Microsoft.Data.Sqlite" Version="6.0.9" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
-		<!-- 2.1.0后支持.net6 maui，旧版在iOS中无法初始化 -->
+		<!-- 2.1.0后支持.net6 maui，旧版在iOS中无法初始化，2.1.1在iOS中无法AOT -->
 		<PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.1.0" />
 		<PackageReference Include="Serilog" Version="2.11.0" />
 		<PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
@@ -39,18 +45,18 @@
 
 	<!-- 非windows引用包 -->
 	<ItemGroup Condition="!$(TargetFramework.Contains('-windows'))">
-		<PackageReference Include="Uno.WinUI" Version="4.4.13" />
+		<PackageReference Include="Uno.WinUI" Version="4.5.9" />
 		<!-- 对应CommunityToolkit.WinUI.Lottie库，渲染Adobe AfterEffects json动画，内部引用SkiaSharp包实现LottieVisualSource -->
-		<PackageReference Include="Uno.WinUI.Lottie" Version="4.4.13" />
+		<PackageReference Include="Uno.WinUI.Lottie" Version="4.5.9" />
 		<!-- uno日志 -->
-		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.4.13" />
+		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.5.9" />
 		<PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
 	</ItemGroup>
 
 	<!-- windows引用包 -->
 	<ItemGroup Condition="$(TargetFramework.Contains('-windows'))">
-		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.1.3" />
+		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.1.5" />
 		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.1" />
 		<!-- Toast参数启动引用 -->
 		<PackageReference Include="Microsoft.Toolkit.Uwp.Notifications" Version="7.1.2" />
@@ -70,7 +76,7 @@
 
 	<!-- wasm引用包 -->
 	<ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
-		<PackageReference Include="Uno.WinUI.WebAssembly" Version="4.4.13" />
+		<PackageReference Include="Uno.WinUI.WebAssembly" Version="4.5.9" />
 		<PackageReference Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.4.0" />
 		<PackageReference Include="SQLitePCLRaw.provider.sqlite3" Version="2.1.0" />
 	</ItemGroup>
