--- a/Tools/DtTemplates/PrjTemplate/iOS/iOS.csproj
+++ b/Tools/DtTemplates/PrjTemplate/iOS/iOS.csproj
@@ -4,6 +4,8 @@
 		<SingleProject>true</SingleProject>
 		<OutputType>Exe</OutputType>
 		<IsUnoHead>true</IsUnoHead>
+		<!-- 避免模拟器上因TextBox崩溃，等待解决 -->
+		<MtouchExtraArgs>$(MtouchExtraArgs) --registrar=static</MtouchExtraArgs>
 	</PropertyGroup>
 
 	<Import Project="..\$ext_safeprojectname$.Client\Stub\Common.props" />
@@ -26,5 +28,6 @@
 		<ImageAsset Include="iOS\Assets.xcassets\AppIcons.appiconset\Icon-29%403x.png" />
 		<ImageAsset Include="iOS\Assets.xcassets\AppIcons.appiconset\Icon-40%402x.png" />
 		<ImageAsset Include="iOS\Assets.xcassets\AppIcons.appiconset\Icon-1024.png" />
+		<Content Include="..\$ext_safeprojectname$.Win\Images\*.png" Link="Images\%(Filename).png" />
 	</ItemGroup>
 </Project>
